fixed overlapping customer reviews

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,7 @@
   width: 100vw;
 }
 body {
+  overflow-y: scroll;
   width: 100vw;
   font-family: "Poppins", roboto;
   overflow-x: hidden;
@@ -305,24 +306,32 @@ div.scroll-container img {
   border-radius: 10px;
 }
 
+/*tiny devices*/
+@media (max-width: 557px) {
+  .customer-reviews {
+  }
+}
+
 /*tablets*/
 @media (max-width: 1171px) {
+  /*contact*/
   .map {
     display: none;
   }
 
+  /*hero*/
   .customer-reviews {
     background-color: rgba(26, 24, 21, 0.733);
-    position: absolute;
+    position: relative;
     left: 25%;
     width: 50%;
-    height: 40%;
-    top: 40%;
+    height: 50%;
+    bottom: 250px;
     padding: 5px;
     font-size: medium;
     color: #ffffff;
     border-radius: 10px;
-    z-index: 99;
+
     text-align: center;
   }
 
@@ -335,7 +344,7 @@ div.scroll-container img {
     position: relative;
     bottom: 200px;
 
-    width: 250px;
+    width: 50%;
 
     background-color: rgba(26, 24, 21, 0.733);
     border-radius: 5%;
@@ -347,7 +356,10 @@ div.scroll-container img {
     letter-spacing: 0.5px;
     align-items: center;
     text-align: center;
-    z-index: 99;
+  }
+
+  .equipment-list {
+    display: none;
   }
 }
 
@@ -527,7 +539,6 @@ div.scroll-container img {
 
     width: 250px;
     height: 250px;
-    z-index: 99;
   }
 
   .map-text {
@@ -548,7 +559,6 @@ div.scroll-container img {
     letter-spacing: 0.5px;
     align-items: center;
     text-align: center;
-    z-index: 99;
   }
 
   /*packages page*/
